[package]
name = "argon2-cloudflare"
version = "0.1.0"
edition = "2021"

[features]
default = ["http", "rpc"]
http = []
rpc = []

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
getrandom = { version = "0.2.15", features = ["js"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
worker = "0.3.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
